--- a/styles/style.css
+++ b/styles/style.css
@@ -5,18 +5,16 @@
   justify-content: space-between;
 }
 
-/* Left-aligned content (item details) */
 .item-details {
   flex: 1;
 }
 
-/* Right-aligned remove button */
 .remove-button {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 30px; /* Set the width of the button */
-  height: 30px; /* Set the height of the button */
+  width: 30px;
+  height: 30px;
   box-shadow: 5px;
   margin-left: 10px;
 }
